[package]
name = "client"
version = "0.1.2"

[lib]
name = "client_lib"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
clap = { version = "2.33.3", features = ["yaml"] }
reqwest = { version = "0.10", features = ["socks", "blocking", "json"] }
failure = "0.1.8"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
itertools = "0.9.0"
hex = "0.4.2"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
config = "0.10"
floating-duration = "0.1.2"
rand = "0.6.5"
base64 = "0.12.3"
env_logger = "0.7.1"
tokio = { version = "0.1.18" }
daemon-engine = "0.6.0"
serial_test = "0.5.0"

[dev-dependencies]
mockito = "0.27.0"