cargo-features = ["resolver"]

[package]
name = "hub"
version = "0.1.3"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
]
build = "build.rs"

[lib]
name = "hub_lib"
path = "src/lib.rs"


[[bin]]
name = "hub_exec"
path = "src/main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time-test = "0.2.2"
log = "0.4"
config = "0.10"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
error-chain = "0.12.4"
failure = "0.1.8"
jsonwebtoken = "5.0.1"
hex = "0.4.2"
env_logger = "0.7.1"
log4rs = "0.13.0"
chrono = "0.4"
serial_test = "0.5.0"
mockall = "0.8.1"
cfg-if = "0.1.10"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
sgx_types = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_urts = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tdh = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
rocksdb= "0.15.0"
tempdir = "0.3.7"
serde_cbor = "0.11.1"
num-bigint-dig = { version = "0.6.1", features = ["serde", "rand"] }
num-traits = { version = "0.2.4" }
rand = "0.7"
lazy_static = "=1.4.0"
reqwest = { version = "=0.10", features = ["blocking", "json"] }
floating-duration = "0.1.2"
serde-big-array = "0.3.1"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
mockito = "0.27.0"

[features]
mockdb = []

[dependencies.shared]
path = "../shared"


