[package]
name = "shared"
version = "0.1.2"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
  "Tomos <tomos@commerceblock.com"
]

[lib]
name = "shared_lib"
path = "src/lib.rs"

[dependencies]
hex = "0.4.2"
libsecp256k1 = "0.3.5"
bitcoin = { version = "0.25", features = [ "use-serde", "rand" ] }
bitcoin_hashes = "0.9"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
electrumx_client = { git = "https://github.com/commerceblock/rust-electrumx-client", tag="v0.1.3" }
reqwest = { version = "=0.10", features = ["blocking", "json"] }
itertools = "0.9.0"
base64 = "0.12.3"
merkletree = "0.21.0"
arrayvec = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
ecies = "0.1.4"
error-chain="0.12.4"
tor-stream = "0.2.0"
sgx_types = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_urts = { rev="v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
serde-big-array = "0.3.1"

[dev-dependencies]
mockito = "0.27.0"